print title and image

--- a/starter-code/views/home.hbs
+++ b/starter-code/views/home.hbs
@@ -4,8 +4,6 @@
 
 <h1>Main page</h1>
 <a href="/profile">Profile</a>
-<div><img src="https://media1.giphy.com/media/d10dMmzqCYqQ0/giphy.gif" alt=""></div>
-<a href="./two">go to private</a>
 
   <a href="/logout">
     <button style="background: red;">Logout</button>
@@ -19,8 +17,11 @@
   <button type='submit'>Submit</button>
   </form>
 
-
+<div>
+  {{!-- <h1>{{articles.0.title}}</h1>
+   --}}
 {{#each articles}}
 {{> articleCard this}}
 {{/each}}
+</div>
 </body>
