--- a/starter-code/views/partials/articleCard.hbs
+++ b/starter-code/views/partials/articleCard.hbs
@@ -2,10 +2,11 @@
 
 
 <article class="article-card">
-  {{this}}
-<a href="/tracks/{{this.id}}"><img class="artist-photo" src="{{this.images.1.url}}" alt=""></a>
-<div class="album-text">
-<a href="/tracks/{{this.id}}"><h1 class="album-title">{{this.name}}</h1></a>
-<a href="/tracks/{{this.id}}">View Tracks</a>
-</div>
+
+  <h1>{{this.title}}</h1>
+   <img src={{this.urlToImage}} alt="">
+   <h2>{{this.author}}</h2>
+   <h2>{{this.publishedAt}}</h2>
+   <p>{{this.description}}</p>
+   
 </article>
