--- a/views/partials/articleCard.hbs
+++ b/views/partials/articleCard.hbs
@@ -6,7 +6,8 @@
   <h1>{{this.title}}</h1>
    <img src={{this.urlToImage}} alt="">
    <h2>{{this.author}}</h2>
-   <h2>{{this.publishedAt}}</h2>
+   <h2> source: {{this.source.name}}</h2>
    <p>{{this.description}}</p>
+   <hr>
    
 </article>
