--- a/views/partials/articleCard.hbs
+++ b/views/partials/articleCard.hbs
@@ -8,6 +8,7 @@
    <h2>{{this.author}}</h2>
    <h2> source: {{this.source.name}}</h2>
    <p>{{this.description}}</p>
+   <a href="/favorites/add/{{this.url}}">Add to favorites</a>
    <hr>
    
 </article>
