--- a/views/partials/articleCard.hbs
+++ b/views/partials/articleCard.hbs
@@ -5,8 +5,8 @@
 
   <h1>{{this.title}}</h1>
    <img src={{this.urlToImage}} alt="">
-   <h2>{{this.author}}</h2>
-   <h2> source: {{this.source.name}}</h2>
+   <h2>By {{this.author}}</h2>
+   <h2> Source: {{this.source.name}}</h2>
    <p>{{this.description}}</p>
    <hr>
    
