--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,15 +1,16 @@
 body {
-  padding: 50px;
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+  margin: 0;
 }
 
 a {
-  color: #00B7FF;
+  color: #fff;
+  text-decoration: none;
 }
 
 /* public/stylesheet/style.css */
 #form {
-  margin: 30px auto;
+  margin: 30px;
   width: 380px;
 }
 
@@ -18,7 +19,7 @@ a {
   display: inline-block;
   margin-bottom: 10px;
   text-align: center;
-  width: 50%;
+  width: 100%;
 }
 
 #form input,
@@ -26,27 +27,28 @@ a {
   box-sizing: border-box;
   font-size: 14px;
   outline: 0;
-  padding: 4px;
-  width: 50%;
+  padding: 10px;
+  
   margin-bottom: 20px;
   border: 2px solid black;
 }
 
 button {
-  background: #43e68c77;
-  border: 1px solid #4b4c4d;
+  background: cornflowerblue;
+  border: none;
   border-radius: 10px;
   color: #fff;
   cursor: pointer;
   display: inline-block;
   font-size: 14px;
-  padding: 8px 16px;
+  padding: 8px 10px;
   text-decoration: none;
   text-transform: uppercase;
   transition: .3s ease background;
-  width: 50%;
+ 
+  margin:0 auto;
   text-align: center;
-  margin: 0 25% auto;
+ 
 }
 
 button:hover {
@@ -66,9 +68,9 @@ button:hover {
 #container{
 width: 100%;
 display: flex;
-flex-direction: column;
 align-content: center;
 justify-content: center;
+margin:0 auto;
 }
 .title{
   width: 50%;
@@ -102,4 +104,80 @@ justify-content: center;
   .layout-title{
     width:100%;
     text-align: center;
+  }
+
+  nav {
+    height:15vh;
+    background-color:cornflowerblue;
+    display: flex;
+    align-items: center;
+    padding-right:45px;
+    justify-content: flex-end;
+  }
+  
+  nav li {
+    display: flex;
+    flex-direction: row;
+    display: inline;
+    padding:0px 10px 0px 10px;
+  }
+
+ #logo {
+    justify-content: flex-start;
+    display:flex;
+    padding-left:40px;
+  }
+
+  #form-container {
+    background-color:rgba(70, 64, 64, 0.178);
+    padding:20px 60px 20px 60px;
+    width:40%;
+    display: flex;
+    justify-content: center;
+    margin:40px auto;
+  }
+
+  #search-form {
+    display: flex;
+    justify-content: center;
+    flex-direction:row;
+    width:20%;
+    text-align:center;
+    margin:40px auto;
+  }
+
+  #search-form label {
+    width:100%;
+    align-items: center;
+    display: flex;
+  }
+
+  #search-form input {
+    width:100vw;
+    margin: 0px 20px 0px 20px;
+  }
+
+  img {
+    display:block;
+    margin:0 auto;
+    width: 70%;
+  }
+
+  article {
+    text-align:center;
+  }
+
+ 
+  footer {
+    height:10vh;
+    background-color:cornflowerblue;
+    display: flex;
+    align-items: center;
+    color:white;
+    text-align: center;
+  }
+
+  footer p {
+    text-align:center;
+    margin:0 auto;
   }
