--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -6,3 +6,13 @@ body {
 a {
   color: #00B7FF;
 }
+
+nav {
+  height:20vh;
+  background-color:cornflowerblue;
+}
+
+nav li {
+  display: flex;
+  flex-direction: row;
+}
