--- a/views/home.hbs
+++ b/views/home.hbs
@@ -1,22 +1,22 @@
-
+<header>
+  <nav>
+    <h1 id="logo" class="layout-title"><a href="/home">World News</a></h1>
+    <li><a href="/home">Home</a></li>
+    <li><a  href="/favorites">Favorites</a></li>
+    <li><a href="/profile">Profile</a></li>
+     <li><a href="/logout"  >Logout</a></li>
+  </nav>
+</header>
 <body>
-  
-
-<h1>Main page</h1>
-<a href="/profile">Profile</a>
-
-  <a href="/logout">
-    <button style="background: red;">Logout</button>
-  </a>
-
-  <form action='/home' method='POST'>
-  
-  <label for=''>What do you want??</label>
-  <input type='text' name='search'>
-  
-  <button type='submit'>Submit</button>
-  </form>
-
+  <div id="form-container">
+    <form id="search-form" action='/home' method='POST'>
+    
+    <label id="search-label" for=''>Search</label>
+    <input type='text' name='search'>
+    
+    <button type='submit'>Submit</button>
+    </form>
+  </div>
 <div>
   {{!-- <h1>{{articles.0.title}}</h1>
    --}}
