--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -8,10 +8,11 @@
   <link rel="stylesheet" href="/stylesheets/style.css" />
 </head>
 <body>
-  <h1 class="layout-title">World news</h1>
 
   {{{body}}}
-
+  <footer>
+    <p>&copy 2019</p>
+  </footer>
   <script src="/javascripts/script.js"></script>
 </body>
 </html>
