favorites works, does delete but get stuck. queries being saved to new collection and being refered to

--- a/views/partials/favoritesCard.hbs
+++ b/views/partials/favoritesCard.hbs
@@ -3,3 +3,4 @@
 <img src="{{this.image}}" alt="">
 <h1>{{this.title}}</h1>
 <h2><a href="{{this.url}}">link</a></h2>
+<a href="/favorites/delete/{{this.id}}">Delete this favorite</a>
