--- a/views/home.hbs
+++ b/views/home.hbs
@@ -7,6 +7,7 @@
   </nav>
 </header>
 <body>
+  <h1>results for {{query}}</h1>
   
  <h1 class="layout-title">World news</h1>
 <a href="/profile">Profile</a>
