--- a/views/home.hbs
+++ b/views/home.hbs
@@ -3,7 +3,7 @@
     <li><a href="/home">Home</a></li>
     <li><a  href="/favorites">Favorites</a></li>
     <li><a href="/profile">Profile</a></li>
-     <li>Logout</li>
+     <li><a href="/logout">Logout</a></li>
   </nav>
 </header>
 <body>
