--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -12,6 +12,9 @@
   {{{body}}}
 <h1 id="title"></h1>
  
+
+   <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
   <script src="/javascripts/script.js"></script>
+
 </body>
 </html>
