--- a/views/article.hbs
+++ b/views/article.hbs
@@ -1,1 +1,10 @@
+<header>
+  <nav>
+     <h1 id="logo" class="layout-title"><a href="/home">World News</a></h1>
+     <li><a href="/home">Home</a></li>
+     <li><a  href="/favorites">Favorites</a></li>
+     <li><a href="/profile">Profile</a></li>
+     <li><a href="/logout"  >Logout</a></li>
+  </nav>
+</header>
 <h1>Article</h1>
