--- a/views/auth-views/login.hbs
+++ b/views/auth-views/login.hbs
@@ -1,3 +1,4 @@
+<div id="container">
 <h1 class="login-title">LOGIN FORM</h1>
 
 <form class="login-form" action='/auth/login' method='POST'>
@@ -15,7 +16,7 @@
     </p>
 
 </form>
-
+</div>
 {{!-- error message display --}} 
 
 {{#if errorMessage}}
