--- a/views/home.hbs
+++ b/views/home.hbs
@@ -1,27 +1,40 @@
-<header>
-  <nav>
-    <h1 id="logo" class="layout-title"><a href="/home">World News</a></h1>
-    <li><a href="/home">Home</a></li>
-    <li><a  href="/favorites">Favorites</a></li>
-    <li><a href="/profile">Profile</a></li>
-     <li><a href="/logout"  >Logout</a></li>
-  </nav>
-</header>
-<body>
-  <div id="form-container">
-    <form id="search-form" action='/home' method='POST'>
+
+  <nav class="navbar navbar-expand-lg sticky-top navbar-light">
+    <a class="navbar-brand" href="/home">World News</a>
+   
+    <form  id="form-container"class="form-inline ml-auto mx-auto" id="search-form" action='/home' method='POST'>
     
-    <label id="search-label" for=''>Search</label>
-    <input type='text' name='search'>
+    <input class="form-control mr-sm-2" type='text' name='search'>
     
-    <button type='submit'>Submit</button>
+    <button class="btn btn-outline-success "type='submit'>Search</button>
     </form>
+
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse flex-grow-1 text-center" id="navbarSupportedContent" id="myNavbar">
+    <ul class=" nav navbar-nav ml-auto flex-nowrap">
+     <li class="nav-item"><a class="nav-link" href="/home">Home</a></li>
+     <li class="nav-item"><a class="nav-link" href="/favorites">Favorites</a></li>
+     <li class="nav-item"><a class="nav-link" href="/profile">Profile</a></li>
+     <li class="nav-item" ><a class="nav-link" href="/logout"  >Logout</a></li>
+  </ul>
   </div>
+  </nav>
+
+<div class="container">
+<body>
+ 
+
+
+
+  
 <div>
   {{!-- <h1>{{articles.0.title}}</h1>
    --}}
 {{#each articles}}
 {{> articleCard this}}
 {{/each}}
+</div>
 </div>
 </body>
