--- a/views/home.hbs
+++ b/views/home.hbs
@@ -1,6 +1,6 @@
 
   <nav class="navbar navbar-expand-lg sticky-top navbar-light">
-    <a class="navbar-brand" href="/home">World News</a>
+    <a class="navbar-brand" href="/home"><img style="height:50px;"src="images/One-news.png"></a>
    
     <form  id="form-container"class="form-inline ml-auto mx-auto" id="search-form" action='/home' method='POST'>
     
