changes to package.json

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -251,7 +251,8 @@ flex-direction: column;
 }
 
 .article-btns {
-  background-color:rgba(21, 68, 156, 0.685);
+  background-color:#fff;
+  color:black;
 }
 
 
