--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -196,7 +196,7 @@ flex-direction: column;
   }
 
   .article-img {
-    display:block;
+    display:inline-block;
     margin:0 auto;
     width: 100%;
     max-height:460px;
@@ -211,7 +211,7 @@ flex-direction: column;
 
   .article-card {
     background-color:#fff;
-    padding: 10px 20px 20px 20px;
+    padding: 20px 20px 20px 20px;
     margin:0px auto;
     width:90%;
     min-height:39vh;
@@ -253,6 +253,7 @@ flex-direction: column;
 .article-btns {
   background-color:#fff;
   color:black;
+  max-height:30px;
 }
 
 
