--- a/views/partials/articleCard.hbs
+++ b/views/partials/articleCard.hbs
@@ -3,7 +3,7 @@
 
 <article class="article-card container">
 
-  <form action='/article' method='POST' style="margin:0px">
+  <form action='/article' method='POST' style="min-height:35vh; color:black;padding:10px 5px;margin-bottom:15px;">
    
      <label for=''></label>
      <input type='text'  style="display:none;" name='title' value="{{this.title}}">
