--- a/views/partials/articleCard.hbs
+++ b/views/partials/articleCard.hbs
@@ -43,6 +43,9 @@
 
      <label for=''></label>
      <input type='text' style="display:none;" name='article' value="{{this.content}}">
+
+      <label for=''></label>
+     <input type='text' style="display:none;" name='source' value="{{this.source.name}}">
    
      <button type='submit'>Add to favorites</button>
    </form>
