--- a/views/profile.hbs
+++ b/views/profile.hbs
@@ -22,7 +22,8 @@
   </div>
   </nav>
 <h2>hey {{{user.username}}}</h2>
-<button id="edit-interests">Edit interests</button>
+<button id="edit-profile">Edit profile</button>
+
 {{!-- <button id="clear-history">Clear history</button> --}}
 <form method='POST'>
   <button id="clear-history" type='submit'>Clear history</button>
