profile form kinda done

--- a/views/profile.hbs
+++ b/views/profile.hbs
@@ -21,10 +21,12 @@
   </ul>
   </div>
   </nav>
+  <div style="display:block" id="profile-lines" >
 <h2>hey! </h2>
 <h4>username: {{{user.username}}}</h4>
 <h4>email: {{user.email}}</h4>
 <h4>Catch Phrase: {{user.catchPhrase}}</h4>
+</div>
 
 <button  id="edit-profile">Edit profile</button>
 
