--- a/views/admin.hbs
+++ b/views/admin.hbs
@@ -2,9 +2,11 @@
 
 {{!-- {{queries}} --}}
 <h1>Queries</h1>
+<div id="admin-queries">
 {{#each queries}}
 {{> queriesCard this}}
 {{/each}}
+</div>
 <h1>Users</h1>
 {{#each users}}
 {{> usersCard this}}
