--- a/views/partials/queriesCard.hbs
+++ b/views/partials/queriesCard.hbs
@@ -1,2 +1,4 @@
-<p>{{this.query}},</p>
-<p>{{this.numberOfTimes}},</p>
+<article id="one-query">
+<p>{{this.query}}</p>
+<p>{{this.numberOfTimes}}</p>
+</article>
