--- a/views/admin.hbs
+++ b/views/admin.hbs
@@ -1,17 +1,26 @@
+<div id="admin-nav">
 <h1>admin</h1>
+<h2><a href="/home">Home</a></h2>
+</div>
+
 
 {{!-- {{queries}} --}}
-<h1>Queries</h1>
+<h1 id="admin-title">Queries</h1>
 <div id="admin-queries">
 {{#each queries}}
 {{> queriesCard this}}
 {{/each}}
 </div>
-<h1>Users</h1>
+
+<h1 id="admin-title">Users</h1>
+<div id="admin-users">
 {{#each users}}
 {{> usersCard this}}
 {{/each}}
-<h1>Favorites</h1>
+</div>
+<h1 id="admin-title">Favorites</h1>
+<div id="admin-favorites">
 {{#each favorites}}
 {{> adminFavoriteCard this}}
 {{/each}}
+</div>
