--- a/views/partials/queriesCard.hbs
+++ b/views/partials/queriesCard.hbs
@@ -1,4 +1,9 @@
-<article id="one-query">
+{{!-- <article id="one-query">
 <p>{{this.query}}</p>
 <p>{{this.numberOfTimes}}</p>
-</article>
+</article> --}}
+
+<tr>
+  <td>{{this.numberOfTimes}}</td>
+  <td>{{this.query}}</td>
+</tr>
