--- a/views/auth-views/login.hbs
+++ b/views/auth-views/login.hbs
@@ -1,5 +1,5 @@
-<div id="container">
-<h1 class="login-title">LOGIN FORM</h1>
+<div id="containers" class="height-container">
+
 
 <form class="login-form" action='/auth/login' method='POST'>
 
