--- a/views/favorites.hbs
+++ b/views/favorites.hbs
@@ -22,7 +22,7 @@
   </div>
   </nav>
 
-
+<div class="height-container">
 {{#if favorites.length}}
 {{#each favorites}}
 {{> favoritesCard this}}
@@ -32,3 +32,8 @@
 {{else}}
 <h1>nothing to show</h1>
 {{/if}}
+</div>
+
+ <footer>
+    <p>&copy 2019</p>
+  </footer>
