--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,9 +1,11 @@
 
 
-<div id="container">
+<div id="container" class="height-container">
 
-<p>Welcome to the world news app</p>
 
+  <img id="home-logo" src="images/One-news.png">
+ 
+ <p>Welcome to One News</p>
   <a href="/signup">
     <button>Sign up</button>
   </a>
