--- a/views/profile.hbs
+++ b/views/profile.hbs
@@ -21,9 +21,11 @@
   </ul>
   </div>
   </nav>
-<h2>hey {{{user.username}}}</h2>
-<button id="edit-interests">Edit interests</button>
-{{!-- <button id="clear-history">Clear history</button> --}}
-<form method='POST'>
-  <button id="clear-history" type='submit'>Clear history</button>
-</form>
+  <div class="height-container">
+    <h2>hey {{{user.username}}}</h2>
+    <button id="edit-interests">Edit interests</button>
+    {{!-- <button id="clear-history">Clear history</button> --}}
+    <form method='POST'>
+      <button id="clear-history" type='submit'>Clear history</button>
+    </form>
+</div>
