--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -6,7 +6,7 @@ body {
 }
 
 a {
-  color: #fff;
+  color: #212121;
   text-decoration: none;
 }
 
@@ -43,16 +43,15 @@ h2 {
 }
 
 button {
-  background: cornflowerblue;
+  background: transparent;
   border: none;
   border-radius: 10px;
-  color: #fff;
+  
   cursor: pointer;
   /* display: inline-block; */
   font-size: 14px;
   /* padding: 8px 10px; */
   text-decoration: none;
-  text-transform: uppercase;
   transition: .3s ease background;
   text-align: center;
 
@@ -72,21 +71,33 @@ button:hover {
   padding: 20px;
   width: 50%;
 }
-/* #container{
-width: 100%;
-display: flex;
-align-content: center;
-justify-content: center;
-margin:0 auto;
-min-height:100vh;
-flex-direction: column;
+ #container{
+  display: flex;
+  justify-content: center;
+  margin: 0 auto;
+  flex-direction: row;
 }
 
-#container a, p{
+#containers{
+  display: flex;
+  justify-content: center;
+  margin: 0 auto;
+  flex-direction: column;
+  background-image:url("../images/One-news.png");
+  background-size:contain;
+  background-position: center;
+  background-repeat: no-repeat;
+  color:white;
+  background-color:rgb(81, 108, 148);
+}
+
+a #container , p #container{
   display:flex;
+  flex-direction: column;
   align-items: center;
   margin:10px auto;
-} */
+  color:black;
+}
 
 
 .title{
@@ -102,12 +113,35 @@ flex-direction: column;
 .login-form{
     display: flex;
     flex-direction: column;
-    width: 25%;
     margin: 0 auto;
     text-align: center;
+    background-color:rgba(227, 228, 230, 0.379);
+    padding:45px;
   }
+
+  .login-form input {
+    text-align:center;
+  }
+
+  .login-form label{
+    margin:10px;
+    color:white;
+  }
+
+  .login-form button{
+    margin: 15px;
+    color:white;
+   border:1px solid white;
+   cursor:pointer;
+  }
+
+  .login-form button:hover {
+      color:black;
+  }
+ 
+
   .login-title{
-    margin: 0 auto;
+    margin: 20px auto;
     text-align: center;
   }
   .signup-form{
@@ -118,7 +152,7 @@ flex-direction: column;
     text-align: center;
   }
   .signup-title{
-    margin: 0 auto;
+    margin: 20px auto;
     text-align: center;
   }
   .layout-title{
@@ -196,30 +230,47 @@ flex-direction: column;
   }
 
   .article-img {
-    display:inline-block;
-    margin:0 auto;
-    width: 100%;
+    display:flex;
+    flex-flow: row;
+    justify-content: flex-start;
+   float:left;
     max-height:460px;
     min-height:150px;
     max-width:260px;
     min-width:100px;
   }
 
+  #article-img {
+    width:100%;
+    max-height:140px;
+  }
+
   article {
     text-align:center;
   }
 
+  #article-right {
+   float:right;
+
+   
+  }
+
   .article-card {
     background-color:#fff;
-    padding: 20px 20px 20px 20px;
+    padding: 3% 20px 1% 20px;
     margin:0px auto;
-    width:90%;
-    min-height:39vh;
+    width:92%;
+    min-height:57vh;
     /* box-shadow:3px 3px 3px 0px rgba(121, 119, 119, 0.75); */
   }
 
   .container {
     border-bottom:1px solid grey;
+    
+  }
+
+  .height-container {
+    min-height:100vh;
   }
 
  
@@ -253,17 +304,39 @@ flex-direction: column;
 .article-btns {
   background-color:#fff;
   color:black;
-  max-height:30px;
+  
+}
+
+.nav-dark {
+  background-color: cornflowerblue !important;
+}
+
+#form-container-mobile {
+  display:none;
+  width:100%;
+  justify-content:center;
+  flex-flow: row nowrap;
+}
+
+#home-logo {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 0 auto;
+  min-width:50%;
+  max-width:70%;
+  max-height:50%;
 }
 
 
 
-/* 
   @media screen and (max-width: 600px) {
-    nav li{display: none;}
-    nav .icon {display:block;}
+    #form-container {display: none;}
+    #form-container-mobile {display:flex; margin-top:30px;};
+    .article-img { display:block;text-align:center;float:center;}
+    #article-img { margin:0 auto;display:block;}
   }
-
+/* 
   @media screen and (max-width: 600px) {
     .topnav.responsive {display:flex; flex-wrap:wrap; justify-content: space-between;align-items:center;}
     .topnav.responsive a.icon {
