--- a/views/partials/articleCard.hbs
+++ b/views/partials/articleCard.hbs
@@ -1,8 +1,6 @@
 
 
-
 <article class="article-card container">
-
   <form action='/article' method='POST' style="min-height:35vh; color:black;padding:10px 5px;margin-bottom:15px;">
    
      <label for=''></label>
@@ -20,31 +18,34 @@
      <label for=''></label>
      <input type='text'  style="display:none;" name='article' value="{{this.content}}">
    
-     <button class="article-btns" type='submit'><h1>{{this.title}}</h1></button>
-     <button class="article-btns article-img" style="width: 30%;display: inline; float: left; cursor:pointer" type='submit'><img style="width:100%; cursor:pointer;padding:0;" src="{{this.urlToImage}}" alt=""></button>
-     <button class="article-btns" type='submit'><h2>{{this.author}}</h2></button>
-     <button class="article-btns" type='submit'><span> source: {{this.source.name}}</span></button>
-     <button class="article-btns" style="max-width:50%;" type='submit'><p >{{this.description}}</p></button>
+     <button class="article-btns" type='submit'><h1 style="font-size:1.5rem;">{{this.title}}</h1></button>
+     <br>
+     <button class="article-btns article-img" style="display: block; float: left; cursor:pointer" type='submit'><img id="article-img" style=" cursor:pointer;padding:0;display:block;margin-top:15px;" src="{{this.urlToImage}}" alt=""></button>
+       <br>
+     <button class="article-btns" type='submit'><h2>By {{this.author}}</h2></button>
+     <button class="article-btns" type='submit'><span> Source: {{this.source.name}}</span></button>
+     <br>
+     <button class="article-btns" style="width:60%;" type='submit'><p >{{this.description}}</p></button>
    </form>
 
-   <form action='/home/add-to-favorite' method='POST'>
+   <form action='/home/add-to-favorite' style="padding:10px 5px; margin-top:-65px;" method='POST'>
    
-     <label for=''></label>
+    
      <input type='text'  style="display:none;" name='title' value="{{this.title}}">
    
-     <label for=''></label>
+    
      <input type='text'  style="display:none;" name='author' value="{{this.author}}">
 
-    <label for=''></label>
+  
      <input type='text'  style="display:none;" name='url' value="{{this.url}}">
 
-     <label for=''></label>
+   
      <input type='text'  style="display:none;" name='image' value="{{this.urlToImage}}">
 
-     <label for=''></label>
+    
      <input type='text' style="display:none;" name='article' value="{{this.content}}">
    
-     <button type='submit'>Add to favorites</button>
+     <button type='submit' style="background-color:transparent; margin-top:10px;"><img src="images/icons8-hearts.png"></button>
    </form>
 
  
