--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -170,6 +170,15 @@ a #container , p #container{
     padding:1rem;
   }
 
+#profile-page {
+  text-align:center;
+  margin:0 auto;
+  display:flex;
+  
+  justify-content: center;
+  flex-direction: column;
+}
+
   /* nav {
     height:15vh;
     background-color:cornflowerblue;
