--- a/views/home.hbs
+++ b/views/home.hbs
@@ -32,9 +32,9 @@
 <body>
  
 
-<h4>Hi {{user.username}}</h4>
+<h4 style="text-align:center;">Hi {{user.username}}</h4>
  <h1 style="text-align:center;">Results for {{query}}</h1>
-  
+  <hr>
 <div>
 
 {{#each articles}}
