--- a/views/profile.hbs
+++ b/views/profile.hbs
@@ -21,11 +21,10 @@
   </ul>
   </div>
   </nav>
-  <div class="height-container">
+  <div id="profile-page" class="height-container container">
   <div style="display:block" id="profile-lines" >
-<h2>hey! </h2>
-<h4>username: {{{user.username}}}</h4>
-<h4>email: {{user.email}}</h4>
+<h4>Username: {{{user.username}}}</h4>
+<h4>Email: {{user.email}}</h4>
 <h4>Catch Phrase: {{user.catchPhrase}}</h4>
 </div>
 
