--- a/views/auth-views/signup.hbs
+++ b/views/auth-views/signup.hbs
@@ -1,4 +1,4 @@
-<div id="containers" class="height-container"> 
+<div class="height-container containers"> 
 
   <form class="login-form" action='/auth/signup' method='POST'>
 
