--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -78,7 +78,7 @@ button:hover {
   flex-direction: row;
 }
 
-#containers{
+.containers{
   display: flex;
   justify-content: center;
   margin: 0 auto;
