--- a/views/home.hbs
+++ b/views/home.hbs
@@ -33,8 +33,10 @@
  
 
 <h4 style="text-align:center;">Hi {{user.username}}</h4>
+{{#if query}}
  <h1 style="text-align:center;">Results for {{query}}</h1>
   <hr>
+  {{/if}}
 <div>
 
 {{#each articles}}
