--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -8,6 +8,7 @@ body {
 a {
   color: #212121;
   text-decoration: none;
+  cursor:pointer;
 }
 
 h1 {
@@ -45,8 +46,8 @@ h2 {
 button {
   background: transparent;
   border: none;
+  outline: none;
   border-radius: 10px;
-  
   cursor: pointer;
   /* display: inline-block; */
   font-size: 14px;
@@ -54,13 +55,17 @@ button {
   text-decoration: none;
   transition: .3s ease background;
   text-align: center;
-
 }
 
 button:hover {
   background: #fff;
   color: #7e858a;
   transition: .3s ease background;
+  cursor: pointer;
+}
+
+button:focus{
+  outline: none;
 }
 
 .error-message {
@@ -99,6 +104,15 @@ a #container , p #container{
   color:black;
 }
 
+
+.add-to-favorite-hidden {
+  display:none;
+}
+
+
+.hidden-nav {
+  display:none;
+}
 
 .title{
   width: 50%;
@@ -318,6 +332,10 @@ a #container , p #container{
   flex-flow: row nowrap;
 }
 
+.form-control {
+  background-color: rgba(255, 255, 255, 0.733);
+}
+
 #home-logo {
   display: flex;
   justify-content: center;
@@ -350,12 +368,6 @@ a #container , p #container{
       background-color: black;
     }
   } */
-
-
-
-
-
-
 
 
 
