--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -296,6 +296,9 @@ a #container , p #container{
     min-height:100vh;
   }
 
+  .height-container2 {
+    min-height:70vh;
+  }
  
   footer {
     height:10vh;
