--- a/views/profile.hbs
+++ b/views/profile.hbs
@@ -1,12 +1,13 @@
 
-  <nav class="navbar navbar-expand-lg sticky-top navbar-light">
-    <a class="navbar-brand" href="/home"><img style="height:50px;padding-left:15px;"src="images/One-news.png"></a>
+  <nav class="navbar navbar-expand-lg sticky-top navbar-light" id="navbar">
+    <a class="navbar-brand colored-nav" href="/home"><img style="height:50px;"src="images/One-news.png"></a>
+    <a  class="navbar-brand hidden-nav" href="/home"><img style="height:50px;"src="images/One-news-white.png"></a>
    
     <form  id="form-container"class="form-inline ml-auto mx-auto" id="search-form" action='/home' method='POST'>
     
-    <input class="form-control mr-sm-2" type='text' name='search'>
+    <input class="form-control mr-sm-2" type='text' name='search' placeholder="search my history">
     
-    <button class="btn btn-outline-success "type='submit'>Search</button>
+    <button class="btn btn-outline-success "type='submit' >Search</button>
     </form>
 
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -20,8 +21,14 @@
      <li class="nav-item" ><a class="nav-link" href="/logout"  >Logout</a></li>
   </ul>
   </div>
+   <form  id="form-container-mobile"class="form-inline ml-auto mx-auto" id="search-form" action='/home' method='POST'>
+    
+    <input class="form-control mr-sm-2" type='text' name='search'>
+    
+    <button class="btn btn-outline-success "type='submit'>Search</button>
+    </form>
   </nav>
-  <div id="profile-page" class="height-container container">
+  <div id="profile-page" class="height-container2 container">
   <div style="display:block" id="profile-lines" >
 <h4>Username: {{{user.username}}}</h4>
 <h4>Email: {{user.email}}</h4>
@@ -49,3 +56,7 @@
   <button id="clear-history" type='submit'>Clear query history</button>
 </form>
 </div>
+
+<footer>
+    <p>&copy 2019</p>
+  </footer>
