--- a/views/profile.hbs
+++ b/views/profile.hbs
@@ -1,5 +1,5 @@
 
-  <nav class="navbar navbar-expand-lg sticky-top navbar-light" id="navbar">
+  <nav class="navbar navbar-expand-lg sticky-top navbar-light" id="navbar" style="background-color:white">
     <a class="navbar-brand colored-nav" href="/home"><img style="height:50px;"src="images/One-news.png"></a>
     <a  class="navbar-brand hidden-nav" href="/home"><img style="height:50px;"src="images/One-news-white.png"></a>
    
@@ -29,7 +29,7 @@
     </form>
   </nav>
   <div id="profile-page" class="height-container2 container">
-  <div style="display:block" id="profile-lines" >
+  <div id="profile-lines" >
 <h4>Username: {{{user.username}}}</h4>
 <h4>Email: {{user.email}}</h4>
 <h4>Catch Phrase: {{user.catchPhrase}}</h4>
@@ -37,18 +37,23 @@
 
 <button  id="edit-profile">Edit profile</button>
 
-  <form style="display:none" id="profile-form" action='/profile/edit' method='POST'>
+  <form id ="profile-form" style="display:none" id="profile-form" action='/profile/edit' method='POST'>
 
     <label for=''>Username</label>
+      <br>
     <input class="profile-input" type='text' name='username' value={{user.username}}>
-  
+    <br>
     <label for=''>E-mail</label>
+      <br>
     <input class="profile-input" type='text' name='email' value={{user.email}}>
-
+  <br>
     <label for=''>Catch Phrase</label>
+      <br>
     <input class="profile-input" type='text' name='catchPhrase' value={{user.catchPhrase}}>
-  
+    <br>
     <button id="submit-profile-edit" type='submit'>Submit</button>
+
+    <button  id="edit-profile2">Cancel</button>
   </form>
 
 {{!-- <button id="clear-history">Clear history</button> --}}
