--- a/views/admin.hbs
+++ b/views/admin.hbs
@@ -24,7 +24,7 @@
   </div>
    <form  id="form-container-mobile"class="form-inline ml-auto mx-auto" id="search-form" action='/home' method='POST'>
     
-    <input class="form-control mr-sm-2" type='text' name='search'>
+    <input class="form-control mr-sm-2" type='text' name='search' placeholder="search my history">
     
     <button class="btn btn-outline-success "type='submit'>Search</button>
     </form>
