specific user data from admin

--- a/views/partials/adminFavoriteCard.hbs
+++ b/views/partials/adminFavoriteCard.hbs
@@ -1,3 +1,7 @@
 
 <h1 id="admin-favorite" >{{this.title}}</h1>
+<h1 id="admin-favorite" >{{this.author}}</h1>
+<h1 id="admin-favorite" >{{this.image}}</h1>
+<img src="{{this.image}}" alt="">
+
 <hr>
