--- a/views/favorites.hbs
+++ b/views/favorites.hbs
@@ -19,6 +19,9 @@
      <li class="nav-item"><a class="nav-link" href="/favorites">Favorites</a></li>
      <li class="nav-item"><a class="nav-link" href="/profile">Profile</a></li>
      <li class="nav-item" ><a class="nav-link" href="/logout"  >Logout</a></li>
+      {{#ifEquals user.username "Admin"}}
+      <li class="nav-item" ><a class="nav-link" href="/admin"  >Admin Panel</a></li>
+    {{/ifEquals}}
   </ul>
   </div>
    <form  id="form-container-mobile"class="form-inline ml-auto mx-auto" id="search-form" action='/home' method='POST'>
