--- a/views/admin.hbs
+++ b/views/admin.hbs
@@ -6,7 +6,7 @@
    
     <form  id="form-container"class="form-inline ml-auto mx-auto" id="search-form" action='/home' method='POST'>
     
-    <input class="form-control mr-sm-2" type='text' name='search' placeholder="search my history">
+    <input class="form-control mr-sm-2" type='text' name='search' placeholder="Search news">
     
     <button class="btn btn-outline-success "type='submit' >Search</button>
     </form>
