--- a/views/article.hbs
+++ b/views/article.hbs
@@ -5,7 +5,7 @@
    
     <form  id="form-container"class="form-inline ml-auto mx-auto" id="search-form" action='/home' method='POST'>
     
-    <input class="form-control mr-sm-2" type='text' name='search' placeholder="search my history">
+    <input class="form-control mr-sm-2" type='text' name='search' placeholder="Search news">
     
     <button class="btn btn-outline-success "type='submit' >Search</button>
     </form>
@@ -42,5 +42,5 @@
     src="{{ article.url }}">
 </iframe>
  <footer>
-    <p>&copy 2019</p>
+    <p>Rose & Jonathan &copy 2019</p>
   </footer>
