--- a/views/auth-views/login.hbs
+++ b/views/auth-views/login.hbs
@@ -9,7 +9,7 @@
   <label for=''>Password</label>
   <input type='password' name='password'>
 
-  <button type='submit'>LOGIN</button>
+  <button type='submit'>Login</button>
 
     <p class="account-message">
       Don't have an account? <a href="/signup">Sign up</a>
