--- a/views/auth-views/signup.hbs
+++ b/views/auth-views/signup.hbs
@@ -1,6 +1,6 @@
 <div class="height-container containers"> 
 
-  <form class="login-form" action='/auth/signup' method='POST'>
+  <form class="signup-form" action='/auth/signup' method='POST'>
 
     <label for=''>Username</label>
     <input type='text' name='username'>
