--- a/views/profile.hbs
+++ b/views/profile.hbs
@@ -23,7 +23,7 @@
   </div>
    <form  id="form-container-mobile"class="form-inline ml-auto mx-auto" id="search-form" action='/home' method='POST'>
     
-    <input class="form-control mr-sm-2" type='text' name='search' placeholder="search my history">
+    <input class="form-control mr-sm-2" type='text' name='search' placeholder="Search news">
     
     <button class="btn btn-outline-success "type='submit'>Search</button>
     </form>
@@ -32,36 +32,36 @@
   <div id="profile-lines" >
 <h4>Username: {{{user.username}}}</h4>
 <h4>Email: {{user.email}}</h4>
-<h4>Catch Phrase: {{user.catchPhrase}}</h4>
+<h4 style="margin-bottom:20px;">Catch Phrase: {{user.catchPhrase}}</h4>
 </div>
 
 <button  id="edit-profile">Edit profile</button>
 
   <form id ="profile-form" style="display:none" id="profile-form" action='/profile/edit' method='POST'>
 
-    <label for=''>Username</label>
+    <label  class="profile-label" for=''>Username</label>
       <br>
     <input class="profile-input" type='text' name='username' value={{user.username}}>
     <br>
-    <label for=''>E-mail</label>
+    <label  class="profile-label" for=''>E-mail</label>
       <br>
     <input class="profile-input" type='text' name='email' value={{user.email}}>
   <br>
-    <label for=''>Catch Phrase</label>
+    <label  class="profile-label"for=''>Catch Phrase</label>
       <br>
     <input class="profile-input" type='text' name='catchPhrase' value={{user.catchPhrase}}>
     <br>
     <button id="submit-profile-edit" type='submit'>Submit</button>
 
-    <button  id="edit-profile2">Cancel</button>
+    <button  id="edit-profile2">Back</button>
   </form>
 
 {{!-- <button id="clear-history">Clear history</button> --}}
 <form method='POST'>
-  <button id="clear-history" type='submit'>Clear query history</button>
+  <button id="clear-history" type='submit'>Clear search history</button>
 </form>
 </div>
 
 <footer>
-    <p>&copy 2019</p>
+    <p>Rose & Jonathan &copy 2019</p>
   </footer>
