--- a/views/partials/favoritesCard.hbs
+++ b/views/partials/favoritesCard.hbs
@@ -10,7 +10,8 @@
 
 
 
-<article class="article-card container">
+<article class="article-card container" id="favourite-article-{{this.id}}">
+
 
   <form action='/article' method='POST' style="min-height:35vh; color:black;padding:10px 5px;margin-bottom:15px;">
    
@@ -55,7 +56,7 @@
    
    </form>
 
-  <a href="/favorites/delete/{{this.id}}">Delete this favorite</a>
+  <a class="article-delete-btn" href="/favorites/delete/{{this.id}}" data-favoriteid="{{this.id}}">Delete this favorite</a>
    
 </article>
     {{!-- <button id="add-edit-comment">add/edit comment</button> --}}
