--- a/views/article.hbs
+++ b/views/article.hbs
@@ -28,8 +28,8 @@
     <button class="btn btn-outline-success "type='submit'>Search</button>
     </form>
   </nav>
-<h1>{{ article.title }}</h1>
-<h2>{{ article.author }}</h2>
+<h1 style="margin:10px 21px;">{{ article.title }}</h1>
+<h2 style="margin:10px 21px;">By {{ article.author }}</h2>
 
 {{!-- <img src="{{ article.image }}" alt="">
 
