--- a/views/home.hbs
+++ b/views/home.hbs
@@ -1,7 +1,7 @@
 
   <nav class="navbar navbar-expand-lg sticky-top navbar-light" id="navbar">
-    <a class="navbar-brand colored-nav" href="/home"><img style="height:50px;"src="images/One-news.png"></a>
-    <a  class="navbar-brand hidden-nav" href="/home"><img style="height:50px;"src="images/One-news-white.png"></a>
+    <a class="navbar-brand colored-nav" href="/home"><img style="height:50px;"src="/images/One-news.png"></a>
+    <a  class="navbar-brand hidden-nav" href="/home"><img style="height:50px;"src="/images/One-news-white.png"></a>
    
     <form  id="form-container"class="form-inline ml-auto mx-auto" id="search-form" action='/home' method='POST'>
     
