--- a/views/partials/articleCard.hbs
+++ b/views/partials/articleCard.hbs
@@ -65,8 +65,8 @@
       <label for=''></label>
      <input type='text' style="display:none;" name='source' value="{{this.source.name}}">
    
-     <button class="add-to-favorite" type='submit' style="background-color:transparent; margin-top:17px;margin-right:4px;"><img src="images/icons8-like.png"></button>
-     <span class="add-to-favorite-hidden" style="background-color:transparent; margin-top:10px;margin:1px auto"><img  src="images/icons8-hearts-filled.png"></span>
+     <button class="add-to-favorite" type='submit' style="background-color:transparent; margin-top:17px;margin-right:4px;"><img src="/images/icons8-like.png"></button>
+     <span class="add-to-favorite-hidden" style="background-color:transparent; margin-top:10px;margin:1px auto"><img src="/images/icons8-hearts-filled.png"></span>
    </form>
 
  
