--- a/views/favorites.hbs
+++ b/views/favorites.hbs
@@ -40,7 +40,7 @@
 
 
 {{else}}
-<h1 style="text-align:center; padding-top:20px;">To add an article to favorites, search for news and press the heart to save it for later.></h1>
+<h1 style="text-align:center; padding-top:20px;">To add an article to favorites, search for news and press the heart to save it for later.</h1>
 {{/if}}
 </div>
 
