--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -382,7 +382,7 @@ a #container , p #container{
     align-items: center;
     color:white;
     text-align: center;
-    
+    margin-bottom:0;
   }
 
   footer p {
